# InfinityAI

./: .coverage  .dockerignore  .env  .flake8  .gitattributes  .gitignore  AZURE_MYSQL_MIGRATION.md  Dockerfile  Dockerfile.azure  MIGRATION_COMPLETE.md  README.md  alternative-migration.py  auth_server_test.py  automate_all.ps1  automate_backend_azure.ps1  automate_backend_db_kv.ps1  automate_dns.ps1  automate_project_review.ps1  automate_startup_and_verification.ps1  automate_verify.ps1  automated_verification.ps1  azure_cleanup.ps1  data-migration.ps1  deploy-frontend.ps1  deploy-master.ps1  deploy-step1.ps1  deploy-step2.ps1  deploy-step3.ps1  deploy-step4.ps1  deploy-step5.ps1  deploy.ps1  docker-compose.yml  find_ids.py  flask_backend.py  flask_test.py  infinityai_backup_20250918_033023.sql  migrate-to-azure-mysql.ps1  package-lock.json  package.json  production.env  (+13 more)
.dvc/: config
alembic/: env.py
api/: Dockerfile  main.py  requirements.txt  test_local_docker.ps1
config/: .env.example
core/: USAGE.md  airflow_etl_dag.py  analytics_dashboard.py  audit_logging.py  automation_orchestration.py  cloud_abstraction.py  collaboration_governance.py  config.py  data_connectors.py  db_backup.py  dvc_setup.py  etl_pipeline.py  extensibility.py  global_data_access.py  mlflow_registry.py  model_management.py  models.py  prometheus_metrics.py  rbac.py  scalable_compute.py  schema.txt  secrets.py  security_compliance.py  security_scan.py  telegramalerts.py  test_extensibility.py  test_tradelogger.py  tool_selection.md  tradelogger.py  usermanager.py
dashboard/: .env  .npmrc  Dockerfile  UI_UX_IMPROVEMENTS.md  docs.html  main.js  package-lock.json  package.json  tsconfig.json
docs/: DEPLOYMENT_ALIGNMENT.md  USAGE_GUIDE.md  azure-backend-deploy.md  index.md  production-runbook.md
engine/: .env  Dockerfile  entrypoint.sh  pyproject.toml  test.history.py
engine/app/: advanced_engine.py  dhan_callback.py  main.py  main_backup.py  main_minimal.py  main_ultra_minimal.py
engine/exchange/: __init__.py  adapter.py
engine/exchange/brokers/: angel.py  dhan.py  fivepaisa.py
infra/: .terraform.lock.hcl  README.md  grafana-provisioning.yml  main.tf  prometheus.yml  simple-container-app.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  terraform.tfvars.example  variables.tf
risk/: kill_switch.py
scripts/: deploy-backend-combined.ps1  dev_backend.sh  dev_frontend.sh  generate_bcrypt_hash.py  keyvault-sync-appsettings.ps1  poll_health.sh  update_appservice_container.ps1  update_dhan_credentials.py
(+58 files in other folders)
