[tool.poetry]
name = "trading-engine"
version = "0.1.0"
description = "The backend trading engine for InfinityAI.Pro"
authors = ["Raghu <raghu@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dhanhq = "^2.0.2"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.31"
mysql-connector-python = "^8.4.0"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"